fix: game initial height issue on mobile

--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -4,8 +4,9 @@
   src: url('../game/assets/Fipps-Regular.ttf');
   font-weight: normal;
 }
+
 .yoru {
-  height: 100vh;
+  // height: 100vh;
   font-family: Fipps;
   text-align: center;
   canvas {
